--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: supabase_error_translator_flutter
 description: >-
   Translate Supabase error codes into user-friendly messages in 9 languages. 
   Perfect for international Flutter apps with automatic language detection and robust fallback system.
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/mrehman29/supabase_error_translator_flutter
 repository: https://github.com/mrehman29/supabase_error_translator_flutter
 issue_tracker: https://github.com/mrehman29/supabase_error_translator_flutter/issues
@@ -22,9 +22,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.19.0
+  intl: any
 
 dev_dependencies:
   flutter_test:
